--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,17 @@
 {
   "name": "functions",
   "description": "Cloud Functions for InteractCV",
-  "engines": { "node": "18" },
+  "scripts": {
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0"
